[project]
name = "tunekit"
version = "0.1.0"
description = "Fine-tune a foundation model and test it via a simple UI"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "peft>=0.10.0",
    "accelerate>=0.29.0",
    "bitsandbytes>=0.43.0",
    "streamlit>=1.35.0",
]

[project.scripts]
tunekit = "tunekit.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tunekit"]
